samples/_failures_safe/1761329296_06b711_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3094465.c: In function ‘main’:
./samples/SAFE/__tmp_e3094465.c:153:5: error: expected expression at end of input
  153 |     if (scanf("%d", &
      |     ^~
./samples/SAFE/__tmp_e3094465.c:153:5: error: expected declaration or statement at end of input
